# stillwater

./: .bandit  .coverage  .gitignore  13D_PRIMELEAK_BREAKTHROUGH.md  5_WEAPONS_TRACKING.md  ABCD_TESTING_READY.md  AB_TEST_FINAL_STATUS.md  AB_TEST_OLLAMA_STATUS.md  ADMIN_UI_README.md  AGENTS.md  AGI-SECRET-SAUCE.md  AGI_SECRET_SAUCE.md  AI-UPLIFT.md  ALL-HOW-TO-NOTEBOOKS-VERIFICATION.md  BATCH_1_QA_FINDINGS.md  BENCHMARK-STRATEGY.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_ORCHESTRATION_SECRETS.md  CLAUDE_CODE_SETUP_COMPLETE.md  CLEANUP_DELETION_LIST.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DESIGN_DELIVERABLES.md  DOCKER-SWE-INTEGRATION.md  Dockerfile.swe  EXECUTIVE_SUMMARY_100_PERCENT.md  FINAL-AUDIT.md  FINAL-INFRASTRUCTURE-STATUS.md  FINAL-NOTEBOOK-STATUS.md  FINAL-RESULTS.md  FINAL_PLAN_TO_100_PERCENT.md  FINAL_STATUS_REPORT.md  HAIKU_SCOREBOARD_INTEGRATION.md  HAIKU_SWARMS_WITH_SKILLS.md  HAIKU_SWARM_GUIDE.md  HARSH-QA-OOLONG-IMO.md  HARSH-QA-SUMMARY.md  HARSH-QA-SWE-BENCHMARK.md  HARSH_QA_PRODUCTION.md  (+165 more)
.claude/: CLAUDE.md  UPDATE_SUMMARY.md
.github/: FUNDING.yml
admin/: AB_TEST_SUMMARY.md  HAIKU_SONNET_RESULTS.md  HARD_SWE_TEST_RESULTS.md  OPUS_STUCK_DIAGNOSIS.md  PHASE_2_CHECKLIST.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PORTAL_V3_GUIDE.md  README.md  REFACTOR_SUMMARY.md  SESSION_FINAL_SUMMARY.md  TEST_LLM_PORTAL.md  app.py  cli_orchestrator.py  llm-portal-status.sh  llm_portal  llm_portal.py  llm_portal_v2.py  llm_portal_v3.py  requirements.txt  restart-llm-portal.sh  server.py  session_manager.py  setup.md  start-admin.sh  start-llm-portal.sh  stop-llm-portal.sh  test_llm_portal.py  test_llm_portal.sh
ai-steroids-results/: README.md  gemini3-flash-on-steroids.md  gpt5.1-mini-on-ai-steroids.md  gpt5.3-on-ai-steroids.md
benchmarks/: MODEL-UPLIFT-REPORT.md  README.md  SKILLS-EXPANSION-REPORT.md  ai-uplift-benchmark.md
books/: HOW-HUMANS-OUTSOURCED-THEIR-MINDS.md  PERSISTENT-INTELLIGENCE.md  how-humans-outsourced-their-minds-article.md
case-studies/: PZIP-BUILT_BY_STILLWATER.md  autonomous-refactor-with-phuc-loop.md  email-triage.md  imo-2024-p2-with-prime-math.md  ml-experiment-tracking-with-ripple.md  onboarding-new-engineer-with-stillwater.md  paudio.md  pzip-built-by-stillwater.md  solace-browser-mvp.md  solace-browser.md  solace-cli.md  solaceagi.md  stillwater-cli-built-with-prime-wishes.md  stillwater-itself.md  web-api-security-audit-with-prime-safety.md
cli/: IMO-CRUSH-WITH-CLI.md  MANUAL.md  README.md  SECRET-SAUCE-TO-CLI.md  audit.md  kernel_config.yaml  stillwater-cli.sh
combos/: README.md  bugfix.md  ci-triage-logs.md  dependency-bump.md  eq-audit-pass.md  hackathon-lightning.md  hackathon-marathon.md  hackathon-sprint.md  mermaid-qa.md  plan.md  qa-audit.md  (+5 more)
(+1192 files in other folders)
