[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stillwater-os"
version = "0.1.0"
description = "Stillwater OS - Beat entropy at everything"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
stillwater = "stillwater.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
