[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stillwater-os"
version = "1.2.2"
description = "Stillwater OS - Beat entropy at everything"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "requests>=2.28",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
stillwater = "stillwater.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
