[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stillwater"
version = "1.4.0"
description = "The Linux of AI — compiler-grade intelligence for everyone. Skills, recipes, and verified swarm workflows."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Phuc Vinh Truong", email = "phuc@phuc.net"}]
keywords = ["ai", "llm", "skills", "recipes", "swarm", "verification", "software-5.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/phuctruong/stillwater"
Repository = "https://github.com/phuctruong/stillwater"
Documentation = "https://github.com/phuctruong/stillwater/tree/main/docs"
"Bug Tracker" = "https://github.com/phuctruong/stillwater/issues"

[project.scripts]
stillwater = "stillwater.cli:main"

[tool.setuptools.packages.find]
where = ["cli/src"]

[tool.pytest.ini_options]
testpaths = ["cli/tests", "imo/tests"]
addopts = "-q"
